# additizer

./: AGENTS.md  Cargo.toml  README.md  TOOLS.md  build.rs
benches/: synth_engine.rs
src/: api.rs  buffer.rs  default_scheme.rs  editor.rs  editor_.rs  engine_factory.rs  envelope.rs  gui.rs  lib.rs  main.rs  oscillator.rs  params.rs  phase.rs  preset.rs  presets.rs  stereo_sample.rs  style.css  synth_engine.rs  utils.rs  voice.rs
src/api/: engine.rs  oscillator.rs  router.rs  spectral_filter.rs
src/editor/: db_slider.rs  direct_input.rs  egui_integration.rs  gain_slider.rs  grid.rs  modulation_input.rs  module_label.rs  modules_ui.rs  multi_input.rs  routing_grid.rs  routing_ui_ext.rs  stereo_slider.rs  utils.rs  waveform.rs
src/editor/grid/: grid_widget.rs  input_tooltip.rs  select_input_popup.rs
src/editor/grid/grid_widget/: oscillator_widget.rs
src/editor/modules_ui/: amplifier_ui.rs  envelope_ui.rs  expressions_ui.rs  external_param_ui.rs  harmonic_editor_ui.rs  lfo_ui.rs  mixer_ui.rs  modulation_filter_ui.rs  oscillator_ui.rs  output_ui.rs  params_ui.rs  spectral_blend_ui.rs  spectral_filter_ui.rs  spectral_mixer_ui.rs  wave_shaper_ui.rs
src/envelope/: adsr.rs  fade_out.rs
src/gui/: additizer_ui.rs  slider_control.rs
src/synth_engine/: amplifier.rs  biquad_filter.rs  buffer.rs  config.rs  context.rs  curves.rs  envelope.rs  envelope_module.rs  event_processor.rs  iir_decimator.rs  module_handle.rs  modules.rs  modules_container.rs  oscillator.rs  output.rs  outputs_arena.rs  phase.rs  routing.rs  smooth.rs  smoothed_sample.rs  smoother.rs  stereo_sample.rs  synth_module.rs  tests.rs  types.rs  ui_bridge.rs  voices_handler.rs
src/synth_engine/modules/: amplifier.rs  envelope.rs  expressions.rs  external_param.rs  harmonic_editor.rs  lfo.rs  mixer.rs  modulation_filter.rs  one.rs  oscillator.rs  output.rs  scalar_adapter.rs  scalar_envelope.rs  spectral_blend.rs  spectral_filter.rs  spectral_mixer.rs  wave_shaper.rs
src/synth_engine/modules/amplifier/: config.rs  link.rs  ui_bridge.rs
src/synth_engine/modules/envelope/: config.rs  link.rs  ui_bridge.rs
src/synth_engine/modules/expressions/: config.rs  link.rs  ui_bridge.rs
src/synth_engine/modules/external_param/: config.rs  link.rs  ui_bridge.rs
src/synth_engine/modules/harmonic_editor/: config.rs  link.rs  ui_bridge.rs
src/synth_engine/modules/lfo/: config.rs  link.rs  ui_bridge.rs
src/synth_engine/modules/mixer/: config.rs  link.rs  ui_bridge.rs
src/synth_engine/modules/oscillator/: bridge.rs  config.rs  link.rs  tests.rs  ui_bridge.rs
src/synth_engine/modules/spectral_blend/: config.rs  ui_bridge.rs
src/synth_engine/modules/spectral_filter/: config.rs  link.rs  ui_bridge.rs
src/synth_engine/modules/spectral_mixer/: config.rs  link.rs  ui_bridge.rs
src/synth_engine/modules/wave_shaper/: config.rs  link.rs  ui_bridge.rs
src/synth_engine/routing/: outputs.rs  outputs_arena.rs  process_context.rs  voice_router.rs
src/synth_engine/smooth/: infinite_smoothed.rs  smoothed_sample.rs  smoother.rs
src/synth_engine/ui_bridge/: link.rs  routing_state.rs  ui_config.rs
src/synth_engine/voices_handler/: tests.rs
